--- a/sample/03-microservices/package.json
+++ b/sample/03-microservices/package.json
@@ -20,14 +20,18 @@
   },
   "dependencies": {
     "@nestjs/common": "11.1.6",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "11.1.6",
     "@nestjs/microservices": "11.1.6",
     "@nestjs/platform-express": "11.1.6",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
-    "rxjs": "7.8.2"
+    "rxjs": "7.8.2",
+    "winston": "^3.17.0",
+    "winston-loki": "^6.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
@@ -39,6 +43,9 @@
     "@types/express": "5.0.3",
     "@types/node": "22.18.6",
     "@types/supertest": "6.0.3",
+    "eslint": "9.35.0",
+    "eslint-plugin-prettier": "5.5.4",
+    "globals": "16.4.0",
     "jest": "29.7.0",
     "prettier": "3.6.2",
     "supertest": "7.1.4",
@@ -46,9 +53,6 @@
     "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "eslint": "9.35.0",
-    "eslint-plugin-prettier": "5.5.4",
-    "globals": "16.4.0",
     "typescript": "5.9.2",
     "typescript-eslint": "8.44.1"
   }
